--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jordanchapian/datasync",
   "devDependencies": {
+    "almond": "^0.3.1",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jasmine": "^0.9.2",
