--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-template-jasmine-requirejs": "^0.2.3"
   }
 }
