--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "datamodel.js",
+  "name": "data-model",
   "version": "0.0.1",
   "description": "Javascript data schemas. Validate data structures, ensure data types, assign virtual methods to datum, generate virtual properties for a data set.",
   "main": "build/datamodel.js",
